Updates to allow queue tests to run with H2